Add unit tests for the APIClient class